fix mainframe view by zzx&ljr